--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,15 +2,20 @@ aiofiles==24.1.0
 aiosqlite==0.20.0
 annotated-types==0.7.0
 anyio==4.4.0
+asttokens==2.4.1
 async-timeout==4.0.3
 asyncpg==0.29.0
 blinker==1.8.2
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
+comm==0.2.2
 construct==2.10.68
 construct-typing==0.5.6
+debugpy==1.8.5
+decorator==5.1.1
 exceptiongroup==1.2.2
+executing==2.1.0
 Flask==3.0.3
 greenlet==3.1.0
 h11==0.14.0
@@ -21,28 +26,51 @@ httpx==0.27.2
 Hypercorn==0.17.3
 hyperframe==6.0.1
 idna==3.9
+ipykernel==6.29.5
+ipython==8.27.0
 itsdangerous==2.2.0
+jedi==0.19.1
 Jinja2==3.1.4
 jsonalias==0.1.1
+jupyter_client==8.6.2
+jupyter_core==5.7.2
 MarkupSafe==2.1.5
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
+packaging==24.1
+parso==0.8.4
+pexpect==4.9.0
+platformdirs==4.3.3
 priority==2.0.0
+prompt_toolkit==3.0.47
+psutil==6.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pydantic==2.9.1
 pydantic_core==2.23.3
+Pygments==2.18.0
 pyhumps==3.8.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pyzmq==26.2.0
 Quart==0.19.6
 quart-auth==0.10.1
 quart-cors==0.7.0
 quart-schema==0.20.0
 requests==2.32.3
+six==1.16.0
 sniffio==1.3.1
 solana==0.34.3
 solders==0.21.0
 SQLAlchemy==2.0.34
+stack-data==0.6.3
 taskgroup==0.0.0a4
 tomli==2.0.1
+tornado==6.4.1
+traitlets==5.14.3
 typing_extensions==4.12.2
 urllib3==2.2.3
+wcwidth==0.2.13
 websockets==11.0.3
 Werkzeug==3.0.4
 wsproto==1.2.0
