--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -70,6 +70,7 @@ tornado==6.4.1
 traitlets==5.14.3
 typing_extensions==4.12.2
 urllib3==2.2.3
+uvicorn==0.31.0
 wcwidth==0.2.13
 websockets==11.0.3
 Werkzeug==3.0.4
