--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -7,13 +7,17 @@ async-timeout==4.0.3
 asyncpg==0.29.0
 blinker==1.8.2
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
 comm==0.2.2
 construct==2.10.68
 construct-typing==0.5.6
+cryptography==43.0.1
 debugpy==1.8.5
 decorator==5.1.1
+dnspython==2.7.0
+email_validator==2.2.0
 exceptiongroup==1.2.2
 executing==2.1.0
 Flask==3.0.3
@@ -46,6 +50,7 @@ prompt_toolkit==3.0.47
 psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pycparser==2.22
 pydantic==2.9.1
 pydantic_core==2.23.3
 Pygments==2.18.0
